kustomize/components/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semicolon-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: semicolon-backend.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend-app
            port: 
              number: 80
